--- a/index.html
+++ b/index.html
@@ -95,61 +95,77 @@
       </div>
     </section>
 
-    <!-- Projetos -->
-    <section id="projetos" class="projects">
-      <div class="container">
-        <h2 class="custom-title">Main Projects</h2>
-        <div class="row g-4">
-          <div class="col-lg-4 col-md-6">
-            <a
-              href="https://arthurmonsores13.github.io/SoloLeveling/"
-              target="_blank"
-              class="custom-projeto-card"
-              title="Design anime - Solo Leveling"
-            >
-              <img
-                src="assets/images/leveling.jpg"
-                alt="Design anime Solo Leveling"
-                class="custom-projeto-img"
-              />
-              <div class="overlay-text">Design anime - Solo Leveling</div>
-            </a>
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <a
-              href="https://arthurmonsores13.github.io/Site-Banda/"
-              target="_blank"
-              class="custom-projeto-card"
-              title="Arctic Monkey Website"
-            >
-              <img
-                src="assets/images/banda.jpg"
-                alt="Arctic Monkey Website"
-                class="custom-projeto-img"
-              />
-              <div class="overlay-text">Arctic Monkey Website</div>
-            </a>
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <a
-              href="https://arthurmonsores13.github.io/Praticas-Extensionistas-Site/"
-              target="_blank"
-              class="custom-projeto-card"
-              title="Medical clinic"
-            >
-              <img
-                src="assets/images/clinic.jpg"
-                alt="Medical clinic"
-                class="custom-projeto-img"
-              />
-              <div class="overlay-text">Medical clinic</div>
-            </a>
-          </div>
-        </div>
+<!-- Projetos -->
+<section id="projetos" class="projects">
+  <div class="container">
+    <h2 class="custom-title">Main Projects</h2>
+    <div class="row g-4">
+      <div class="col-lg-4 col-md-6">
+        <a href="https://arthurmonsores13.github.io/SoloLeveling/"
+           target="_blank"
+           class="custom-projeto-card"
+           title="Design anime - Solo Leveling">
+          <img src="assets/images/leveling.jpg"
+               alt="Design anime Solo Leveling"
+               class="custom-projeto-img">
+          <div class="overlay-text">Design anime - Solo Leveling</div>
+        </a>
       </div>
-    </section>
+
+      <div class="col-lg-4 col-md-6">
+        <a href="https://arthurmonsores13.github.io/Site-Banda/"
+           target="_blank"
+           class="custom-projeto-card"
+           title="Arctic Monkey Website">
+          <img src="assets/images/banda.jpg"
+               alt="Arctic Monkey Website"
+               class="custom-projeto-img">
+          <div class="overlay-text">Arctic Monkey Website</div>
+        </a>
+      </div>
+
+      <div class="col-lg-4 col-md-6">
+        <a href="https://arthurmonsores13.github.io/Praticas-Extensionistas-Site/"
+           target="_blank"
+           class="custom-projeto-card"
+           title="Medical clinic">
+          <img src="assets/images/clinic.jpg"
+               alt="Medical clinic"
+               class="custom-projeto-img">
+          <div class="overlay-text">Medical clinic</div>
+        </a>
+      </div>
+    </div>
+
+    <h2 class="custom-title mt-5">Projects</h2>
+    <div class="row g-4">
+      <div class="col-lg-4 col-md-6">
+        <a href="https://site-medico-geriatra.vercel.app/"
+           target="_blank"
+           class="custom-projeto-card"
+           title="Clinic Website">
+          <img src="assets/images/siteclinic.jpg"
+               alt="Clinic Website"
+               class="custom-projeto-img">
+          <div class="overlay-text">Clinic Website</div>
+        </a>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <a href="https://arthurmonsores13.github.io/Conversor/"
+           target="_blank"
+           class="custom-projeto-card"
+           title="Conversor">
+          <img src="assets/images/conversor.jpg"
+               alt="Coversor"
+               class="custom-projeto-img">
+          <div class="overlay-text">Conversor</div>
+        </a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
     <!-- Contato -->
     <section id="contato">
